# memory-mcp-triple-system

./: .env.example  .gitignore  .railway-trigger  CONTRIBUTING.md  Dockerfile  Dockerfile.railway  GRAPH-001-COMPLETION-REPORT.md  ISS-047-INTEGRATION-TEST-PLAN.md  LICENSE  README.md  REM-002-003-COMPLETION-SUMMARY.md  REM-004-WEEK-REFERENCES-UPDATE-SUMMARY.md  REM-006-COMPLETION-SUMMARY.md  REM-006-INVESTIGATION-REPORT.md  conftest.py  demo_rem_fixes.py  docker-compose.yml  gate0_verify.py  gate1_verify.py  gate2_verify.py  gate4_verify.py  ingestion-log.txt  pyproject.toml  pytest.ini  railway.toml  requirements-api.txt  requirements.txt  start-http-server.bat  test_all_14_tools.py  test_rlm_organ_map.py  test_rlm_quick.py
.claude/: mcp-config.json
audits/: MECE-docs-vs-code-2026-06-15.md  MECE-merged-audit-2026-06-12.md  OPTIMIZATION-PLAN-2026-06-15.md  PLAN-mcp-fully-working-2026-06-15.md  STATUS-2026-06-13.md  data-flow-verification.md  dead-code-report.json  generate_dead_code_report.py  pyflakes-raw.txt  vulture-raw.txt
config/: memory-mcp.yaml  memory-schema.yaml
docs/: ARCHITECTURE-DECISION.md  ARCHITECTURE.md  CRITIQUE-VALIDATION-REPORT.md  CURRENT.md  DEPENDENCY-TREE.md  FIX-SUMMARY.md  FIXES.md  FUTURE_ENHANCEMENTS.md  HIPPORAG-ARCHITECTURE.md  KNOWLEDGE-BASE-COMPLETE.md  MASTER-REMEDIATION-INDEX.md  MCP-DEPLOYMENT-GUIDE.md  MCP-INTEGRATION.md  MECE-CONSOLIDATED-ISSUES.md  Memory-MCP-Skill-Assignment-Plan.md  Memory-MCP-Unified-Remediation-Plan-Multi-Model-Synthesis.md  OPENMEMORY-COMPARISON-REPORT.md  QUICK-START.md  README.md  REMAINING-9-ISSUES-PLAN.md  (+7 more)
(+556 files in other folders)
