[project]
name = "memory-mcp-triple-system"
version = "1.0.0"
description = "Memory MCP Triple System"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv==1.0.0",
    "pydantic>=2.5.0",
    "pyyaml==6.0.1",
    "chromadb>=1.0.0",
    "sentence-transformers>=5.1.0",
    "transformers>=4.44.0",
    "networkx>=3.5",
    "spacy>=3.7.2",
    "pgmpy==0.1.24",
    "torch>=2.2.0",
    "torch-geometric>=2.4.0",
    "rank-bm25==0.2.2",
    "nltk>=3.8.1",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "watchdog==3.0.0",
    "python-multipart==0.0.6",
    "loguru==0.7.2",
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "pytest-benchmark==4.0.0",
    "black>=23.12.0",
    "ruff>=0.13.0",
    "mypy>=1.7.1",
    "bandit>=1.7.5"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
